Fix grid scrolling on firefox

--- a/ui/client-react/src/components/report/reportFieldSelectMenu.scss
+++ b/ui/client-react/src/components/report/reportFieldSelectMenu.scss
@@ -14,6 +14,7 @@
     position: relative;
     display: flex;
     flex: 1 auto;
+    height: 100%;
 
     .fieldSelectCloseIcon {
         margin-left: 90%;
